argocd/apps/calibre/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
spec:
  ingressClassName: nginx
  rules:
    - host: calibre.k8s.yanello.net
      http:
        paths:
          - backend:
              service:
                name: calibre
                port:
                  number: 8083
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-dl
spec:
  ingressClassName: nginx
  rules:
    - host: calibre-dl.yanello.net
      http:
        paths:
          - backend:
              service:
                name: calibre-dl
                port:
                  number: 8084
            path: /
            pathType: Prefix
